<resources>
    <string name="app_name">Speedrocket</string>
    <string name="title_activity_navigation_menu">Speed Rocket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="class_prompt">Interest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title">Description</string>
    <string-array name="Interest">
        <item>Technology</item>
        <item>Sport</item>
        <item>Entertainment</item>
    </string-array>
    <string name="facebook_app_id">2238968796333788</string>
    <string name="fb_login_protocol_scheme">fb2238968796333788</string>
    <string name="Language">Language</string>
    <string name="country">Country</string>
    <string-array name="cityKuwait">
        <item> Al Asimah </item>
        <item> Jahra </item>
        <item>Farwaniya </item>
        <item>Hawalli </item>
        <item> Mubarak Al-Kabeer </item>
        <item> Ahmadi </item>
    </string-array>
    <string-array name="cityEmirat">
        <item>Abu Dhabi</item>
        <item>Abu Dhabi</item>
        <item>Ajman</item>
        <item>Al Ain</item>
        <item>Sharjah </item>
        <item>Ras Al Khaimah</item>
        <item>Fujairah</item>
        <item>Umm al-Quwain</item>
        <item>khofan</item>
        <item>Dpa el-hasn</item>
    </string-array>
    <string-array name="citysaudi">
        <item> محافظة الرياض</item>
        <item> الدرعية </item>
        <item>الخرج </item>
        <item>الدوادمي </item>
        <item> المجمعة </item>
        <item> القويعية </item>
        <item> الأفلاج </item>
        <item> وادي الدواسر </item>
        <item> الزلفي </item>
        <item> شقراء </item>
        <item> حوطة بني تميم </item>
        <item> عفيف </item>
        <item> الغاط </item>
        <item> السليل </item>
        <item> ضرما	 </item>
        <item> المزاحمية </item>
        <item> رماح </item>
        <item> ثادق </item>
        <item> حريملاء </item>
        <item> الحريق </item>
        <item> مرات </item>
        <item> الرين </item>
        <item> مكة المكرمة </item>
        <item> جدة </item>
        <item> الطائف </item>
        <item> القنفذة </item>
        <item> الليث </item>
        <item> رابغ </item>
        <item> خليص </item>
        <item> الخرمة </item>
        <item> رنية </item>
        <item> تربة </item>
        <item> الجموم </item>
        <item> الكامل </item>
        <item> المويه </item>
        <item> ميسان </item>
        <item> أضم </item>
        <item> العرضيات </item>
        <item> بحرة </item>
        <item> المدينة المنورة </item>
        <item> ينبع </item>
        <item> العلا </item>
        <item> مهد الذهب </item>
        <item> الحناكية </item>
        <item> بدر </item>
        <item> خيبر </item>
        <item> العيص </item>
        <item> وادي الفرع </item>
        <item> بريدة </item>
        <item> عنيزة </item>
        <item> الرس </item>
        <item> المذنب </item>
        <item> البكيرية </item>
        <item> البدائع </item>
        <item> الأسياح </item>
        <item> النبهانية </item>
        <item> الشماسية </item>
        <item> عيون الجواء </item>
        <item> رياض الخبراء </item>
        <item> عقلة الصقور	 </item>
        <item> ضرية	 </item>
        <item> الدمام </item>
        <item> الأحساء </item>
        <item> حفر الباطن </item>
        <item> الجبيل </item>
        <item> القطيف </item>
        <item> الخبر </item>
        <item> الخفجي </item>
        <item> رأس تنورة </item>
        <item> بقيق </item>
        <item> النعيرية </item>
        <item> قرية العليا </item>
        <item> العديد </item>
        <item> أبها </item>
        <item> خميس مشيط </item>
        <item> بيشة </item>
        <item> النماص </item>
        <item> محايل عسير </item>
        <item> ظهران الجنوب </item>
        <item> تثليث </item>
        <item> سراة عبيدة	 </item>
        <item> رجال ألمع </item>
        <item> بلقرن </item>
        <item> أحد رفيدة </item>
        <item> المجاردة	 </item>
        <item> البرك </item>
        <item> بارق </item>
        <item> تنومة </item>
        <item> طريب </item>
        <item> الحرجه </item>
        <item> تبوك </item>
        <item> الوجه </item>
        <item> ضبا </item>
        <item> تيماء </item>
        <item> أملج </item>
        <item> حقل </item>
        <item> البدع </item>
        <item> حائل </item>
        <item> بقعاء </item>
        <item> الغزالة </item>
        <item> الشنان </item>
        <item> الحائط </item>
        <item> السليمي </item>
        <item> الشملي </item>
        <item> موقق </item>
        <item> سميراء	 </item>
        <item> عرعر </item>
        <item> رفحاء </item>
        <item> طريف </item>
        <item> العويقيلة </item>
        <item> جازان </item>
        <item> صبيا </item>
        <item> أبو عريش </item>
        <item> صامطة </item>
        <item> بيش </item>
        <item> الدرب </item>
        <item> الحرث </item>
        <item> ضمد	 </item>
        <item> الريث </item>
        <item> جزر فرسان </item>
        <item> الدائر </item>
        <item> العارضة	 </item>
        <item> أحد المسارحة </item>
        <item> العيدابي </item>
        <item> فيفاء </item>
        <item> الطوال </item>
        <item> هروب </item>
        <item>نجران</item>
        <item> شرورة </item>
        <item> حبونا </item>
        <item> بدر الجنوب </item>
        <item> يدمه </item>
        <item> ثار </item>
        <item> خباش </item>
        <item> الخرخير </item>
        <item> الباحة </item>
        <item> بلجرشي </item>
        <item> المندق </item>
        <item> المخواة </item>
        <item> قلوة </item>
        <item> العقيق </item>
        <item> القرى </item>
        <item> غامد الزناد </item>
        <item> الحجرة </item>
        <item> بني حسن </item>
        <item> سكاكا </item>
        <item> القريات </item>
        <item> دومة الجندل	 </item>
        <item> طبرجل	 </item>
    </string-array>
    <string-array name="cityEgypt">
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="accountNumber">account number</string>
    <string name="bankName">bank name</string>
    <string name="swiftCode">swift code</string>
    <string name="branchAddress">branch address</string>
    <string name="addBank">add bank</string>
    <string name="email">email or Mobile  number</string>
    <string name="fax">fax</string>
    <string name="mobileNumber">Mobile  number</string>
    <string name="companyLogo">company logo</string>
    <string name="startTime">start time</string>
    <string name="endTime">endTime</string>
    <string name="discount">discount</string>
    <string name="addCompany">add company</string>
    <string name="upload">upload</string>
    <string name="offerImage">offer image</string>
    <string name="choosePackage">choose package</string>
    <string name="advertice">advertise</string>
    <string name="productImage">product image</string>
    <string name="addProduct">add product</string>
    <string name="buyQuanteties">Buy Rockets</string>
    <string name="remaining">Remaining</string>
    <string name="yourCredit">your credit</string>
    <string name="coins">coins</string>
    <string name="coin">Rocket</string>
    <string name="amount">Amount</string>
    <string name="egp">EGP</string>
    <string name="otherAmount">Other Amount</string>
    <string name="price">price</string>
    <string name="weAccept">we accept</string>
    <string name="cardNumber">cardNumber</string>
    <string name="expirationDate">expiration date</string>
    <string name="cvvCode">cvv code</string>
    <string name="pay">pay</string>
    <string name="address">address</string>
    <string name="sendMessage">send message</string>
    <string name="description">description</string>
    <string name="cancel">cancel</string>
    <string name="password">password</string>
    <string name="forgetPassword">forget password</string>
    <string name="signWith">sign in with</string>
    <string name="createNewAccount">create new account</string>
    <string name="registertion">registertion</string>
    <string name="login">login</string>
    <string name="cashReport">Cash Report</string>
    <string name="totalCash">Total Cash</string>
    <string name="pendingCash">Pending Cash</string>
    <string name="netCash">Net Cash</string>
    <string name="requestCash">request cash</string>
    <string name="addBankAccount">add bank account</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="product">Product</string>
    <string name="advertisment">Advertisment</string>
    <string name="myCash">My Cash</string>
    <string name="contactUs">Contact Us</string>
    <string name="addOffer">add offer</string>
    <string name="shippingInfo">Shipping Info</string>
    <string name="name">Full Address</string>
    <string name="mobile">Mobile </string>
    <string name="placeOrder">place order</string>
    <string name="presenter">presenter</string>
    <string name="moreDetails">more details</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="seconds">S</string>
    <string name="user">admin</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="continu">continue</string>
    <string name="remember">Remember</string>
    <string name="rememberContain">This Product will deliver within 10 days\n
may be more depending on deliver address</string>
    <string name="warningMessage">Warning Message</string>
    <string name="chooseYourBankAccount">choose your bank account</string>
    <string name="send">send</string>
    <string name="message">Message</string>
    <string name="offer">offer</string>
    <string name="paymentMessage">Payment Message</string>
    <string name="paymentMessageContain">sorry ! you havenot coins enought to continue .</string>
    <string name="recharge">recharge</string>
    <string name="offersYou">offers you</string>
    <string name="accept">accept</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="products">Products</string>
    <string name="myPanal">My Panal</string>
    <string name="myProducts">My Offers</string>
    <string name="buyCoins">Buy Rockets</string>
    <string name="user_view">Users List</string>
    <string name="logOut">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="winner_expired">expired</string>
    <string name="sold">sold</string>
    <string name="active">Active</string>
    <string name="allOffers">All</string>
    <string name="yourOrders">My orders</string>
    <string name="go_confirm_company">Go confirm Company</string>
    <string name="warrning_confirm_company">you didn\'t confirm any company yet  please confirm one first</string>
    <string name="conditions">Conditions</string>
    <string name="terms_of_sale">Terms of Sale</string>
    <string name="usage_agreement">Usage Agreement</string>
    <string name="title">Title</string>
</resources>