<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1e2639"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/paymentMessage"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#E65100"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/paymentMessageContain"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/offerdetails_description"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:text="@string/recharge"
            android:id="@+id/bt_recharge_dialogue_coins"
            android:background="@drawable/moredetails_effect"
            android:onClick="DialogRecharege"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:onClick="cancelDialogHaveNotEnoughCoins"
            android:id="@+id/bt_cancel_dialogue_coins"
            android:background="@drawable/moredetails_effect"
            />
    </LinearLayout>

</LinearLayout>