<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="com.speedrocket.progmine.speedrocket.View.Activites.PaymentScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/remember"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#625d7e"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/rememberContain"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/continu"
            android:textColor="#FFF"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="continuePurchase"
            android:background="@drawable/moredetails_effect"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="cancelPurchase"
            android:background="@drawable/moredetails_effect"
            />


    </LinearLayout>


</LinearLayout>
