<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.speedrocket.progmine.speedrocket.View.Activites.CompanyProfile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/sendMessage"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#625d7e"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/md_orange_700"
            android:drawablePadding="20dp"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="#000"
            android:textColorHint="#90A4AE"
            android:textCursorDrawable="@null" />


        <android.support.v7.widget.AppCompatEditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:drawablePadding="20dp"
            android:textColor="#000"
            android:textCursorDrawable="@null"
            android:hint="@string/message"
            android:textColorHint="#90A4AE"
            android:gravity="top"
            android:padding="5dp"
            android:backgroundTint="@color/md_orange_700"
            android:scrollHorizontally="true"
            android:inputType="textMultiLine"
            android:id="@+id/contact_message"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/send"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="sendMessage"
            android:background="@drawable/moredetails_effect"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/moredetails_effect"
            android:onClick="cancelContactUsDialog"
            />


    </LinearLayout>


</LinearLayout>
