<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/my_winner_products_app_bar"
    android:theme="@style/AppThemeLogin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.speedrocket.progmine.speedrocket.View.Activites.MyWinnerProducts">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"

        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_report_effect"
            android:text="@string/allOffers"
            android:textColor="#FFF"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="allOffers"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_report_effect"
            android:text="@string/active"
            android:textColor="#FFF"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="activeOffer"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_report_effect"
            android:text="@string/sold"
            android:textColor="#FFF"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="soldOffer"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_report_effect"
            android:text="@string/winner_expired"
            android:textColor="#FFF"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="expiredOffer"
            />


    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myProductList"
        />
</LinearLayout>
