<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1e2639"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/offer"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#E65100"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ibrahim"
            android:textColor="#FFF"
            android:id="@+id/nameofsender"
            android:layout_marginBottom="5dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ahmed"
                android:textColor="#FFF"
                android:id="@+id/nameofsender2"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offersYou"
            android:textColor="#FFF"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="#FFF"
            android:drawableRight="@drawable/rocket_icon_colored"
            android:drawablePadding="5dp"
            android:id="@+id/amountofcoinRecived"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"

            android:background="@drawable/moredetails_effect"
            android:onClick="AcceptReciveOfferFromHimDialogue"
            android:text="@string/accept" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:onClick="CancelReciveOfferFromHimDialogue"
            android:background="@drawable/moredetails_effect"
            />
    </LinearLayout>
</LinearLayout>